Revision history for File::DataClass

0.7.326  2011-12-02
	 - Bumped File::Path version

0.7.325  2011-12-02
         - Updated inc::Bob, set create_readme_pod to true for README.pod file
         - Added missing IPC::Cmd dependency
         - Added default for localedir to F::DC::Schema::WithLanguage

0.7.321  2011-11-30
         - Works with CX::U 0.4.1084
         - Fixed new attribute assignment bug in HashMerge
         - Changed comment field types in Gettext::Storage::PO to scalars
         - Fixed bug in File::MailAlias BUILDARGS not using ioc_obj
         - Added Schema::WithLanguage
         - Storage::WithLanguage can dump
         - Storage::WithLanguage passes tests
         - Renamed Combinator to Storage::WithLanguage
         - Combinator rewritten to use F::Gettext
         - Updated inc::Bob
         - Fixed bug in ResultSource now has copy of schema storage
         - Fixed string quoting in po files
         - Gettext mo files now create a hash table entry for msgid_plural
         - Added Gettext for mo files (read-only)
         - Fixed the way ResultSource::WithLanguage patches in storage object
         - Added Gettext for po files
         - Eliminated Exception_Class class attribute
         - Exception_class now an obj attribute defaulting to class attribute

0.6.286  2011-07-11
         - Changed F::DC API. Made ioc_obj an attribute not a parameter
         - More breakage in IO::tempfile. Set mode to w+ and fix open_args
         - Fixed breakage in IO::stat. Which means val doesn't roundtrip
         - Added aliases_map to MailAlias. Caching hash ref of alias list
         - Improved is_file and is_dir logic
         - Stop sending perms to IO::File->new. Just use umask
         - Fixed type error in chmod. Added more tests
         - Added chown
         - Stat->{mode} is now & 07777 so that the perms val roundtrips
         - Added chmod and copy methods

0.5.271  2011-05-30
         - Fixed base path bug in IO::absolute