@@ -8,13 +8,26 @@ use version; our $VERSION = qv( sprintf '0.7.%d', q$Rev$ =~ /\d+/gmx );
 
 use Moose;
 use MooseX::ClassAttribute;
+use File::DataClass::Exception;
 
 with qw(File::DataClass::Constraints);
 
 class_has 'Cache' => is => 'rw', isa => 'HashRef[F_DC_Cache]',
    default        => sub { {} };
 
+class_has 'Exception_Class' => is => 'rw', isa => 'F_DC_Exception',
+   default                  => q(File::DataClass::Exception);
+
 class_has 'Lock'  => is => 'rw', isa => 'Maybe[F_DC_Lock]';
+
+has 'exception_class' => is => 'ro', isa => 'F_DC_Exception',
+   lazy_build         => 1;
+
+# Private methods
+
+sub _build_exception_class {
+   my $self = shift; return $self->Exception_Class;
+}
 
 __PACKAGE__->meta->make_immutable;
 
